GNOME Bugzilla – Bug 745515
level: infinite loop when interval is set to low values
Last modified: 2015-04-23 23:52:59 UTC
When interval value is set less, then the blocksize being calculated is 0. But block size cannot be zero Hence returning in case of 0 block size
Created attachment 298411 [details] [review] fix when blocksize is 0
Comment on attachment 298411 [details] [review] fix when blocksize is 0 I think we should either make that an error, or use a block_size of 1 as fallback. And maybe make the minimum value of the property a bit bigger :)
Created attachment 298517 [details] [review] fix when blocksize is 0 We wont be able to set minimum value of the property, since the calculation of interval_frames is dependent on rate of the audio and the interval property being set. And based on that block size is being calculated. Since block size can not be less than 1, resetting the value to 1.
Hi Sebastian, Can you please check if the changes made are proper. Regards, Vineeth
commit 03d3d36053d05b82a76918175d1b62c15d551b0f Author: Tim-Philipp Müller <tim@centricular.com> Date: Fri Apr 24 00:30:35 2015 +0100 level: fix infinite loop for very low interval values https://bugzilla.gnome.org/show_bug.cgi?id=745515