level: fix infinite loop for very low interval values

https://bugzilla.gnome.org/show_bug.cgi?id=745515